# playwright-proxy-mcp

./: .dockerignore  .env.example  .env.example.instance-overrides  .env.example.multi-pool  .env.example.single-pool  .env.example.stealth  .env.example.wsl-windows  .gitignore  .ruffignore  BUGFIX_BROKEN_PIPE.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PING_TIMEOUT_CONFIRMED.md  README.md  STEALTH_IMPLEMENTATION.md  bulk-command-test.sh  bulk-wait-debug.sh  claude_desktop_config.example.json  container-test.env  container-test.sh  diagnose-wait-hang.sh  docker-compose.devcontainer.yml  docker-compose.test.yml  docker-compose.yml  dockerignore.reference  host-test.env  issue.md  mcp-config.json  mcp-test-config.json  prompt-history.txt  pyproject.toml  test-ping-timeout-hypothesis.sh  test-startup.env
.devcontainer/: devcontainer.json
docs/: BROWSER_POOLS_SPEC.md  CUSTOMIZATION.md  FASTMCP_REFERENCE.md  FASTMCP_SDK_REFERENCE.md  IMPLEMENTATION_STATUS.md  LOGGING_IMPROVEMENTS.md  STEALTH.md  TROUBLESHOOTING.md  TROUBLESHOOTING_WAIT_FOR.md  WSL_WINDOWS.md
scripts/: QUICK_REFERENCE.md  README.md  test.sh
src/aria_snapshot_parser/: README.md  pyproject.toml
src/aria_snapshot_parser/examples/: basic_usage.py
src/aria_snapshot_parser/grammar/: AriaKey.g4
src/aria_snapshot_parser/src/aria_snapshot_parser/: __init__.py  exceptions.py  parser.py  serializer.py  types.py  utils.py
src/aria_snapshot_parser/tests/: __init__.py  conftest.py  test_integration.py  test_parser.py  test_serializer.py
src/aria_snapshot_parser/tests/fixtures/: attributes.yaml  google.yaml  regex.yaml  simple.yaml  simple_expected.json
tests/: README.md  __init__.py  conftest.py  test_aria_processor.py  test_blob_manager.py  test_browser_evaluate_pagination.py  test_browser_integration.py  test_browser_jmespath_integration.py  (+25 more)
(+27 files in other folders)
